<resources>
    <string name="app_name">Tipsplit</string>
    <string name="clear">clear</string>
    <string name="bill_total_with_tax">Bill Total with Tax :</string>
    <string name="total_per_person">Total per Person :</string>
    <string name="_12">12%</string>
    <string name="tip_amount">Tip Amount :</string>
    <string name="go">go</string>
    <string name="_15">15%</string>
    <string name="_18">18%</string>
    <string name="_20">20%</string>
    <string name="enter_bill_total">Enter bill total</string>
    <string name="enter_no_of_people">Enter no. of people</string>
    <string name="total_with_tip">Total With Tip :</string>
    <string name="tip">Tip :</string>
    <string name="number_of_people">Number of People :</string>
</resources>