<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="doSplit"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214">

        <RadioButton
            android:id="@+id/tip_twelve"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:buttonTint="@color/purple_700"
            android:fontFamily="sans-serif-medium"
            android:onClick="doTotal"
            android:text="@string/_12"
            android:textColor="#555454"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/tip_fifteen"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:buttonTint="@color/purple_700"
            android:fontFamily="sans-serif-medium"
            android:onClick="doTotal"
            android:text="@string/_15"
            android:textColor="#555454"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/tip_eighteen"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:buttonTint="@color/purple_700"
            android:fontFamily="sans-serif-medium"
            android:onClick="doTotal"
            android:text="@string/_18"
            android:textColor="#555454"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/tip_twenty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:buttonTint="@color/purple_700"
            android:fontFamily="sans-serif-medium"
            android:onClick="doTotal"
            android:text="@string/_20"
            android:textColor="#555454"
            android:textSize="16sp"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <EditText
        android:id="@+id/Totali"
        android:layout_width="190dp"
        android:layout_height="41dp"
        android:background="#B2FDBC"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColorHint="#555454"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="154dp"
        android:layout_height="40dp"
        android:background="#CACACA"
        android:fontFamily="sans-serif-medium"
        android:textColor="#555454"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.584"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/totalWithTip"
        android:layout_width="151dp"
        android:layout_height="43dp"
        android:background="#CACACA"
        android:fontFamily="sans-serif-medium"
        android:textColor="#555454"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Totali"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <EditText
        android:id="@+id/totalPeople"
        android:layout_width="84dp"
        android:layout_height="52dp"
        android:background="#B2FDBC"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#555454"
        android:textColorHint="#555454"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/totalPerPerson"
        android:layout_width="141dp"
        android:layout_height="52dp"
        android:background="#CACACA"
        android:fontFamily="sans-serif-medium"
        android:textColor="#555454"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.727" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="62dp"
        android:onClick="doSplit"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Totali"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/totalPeople"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611" />

    <Button
        android:id="@+id/button3"
        android:layout_width="87dp"
        android:layout_height="66dp"
        android:onClick="doClear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/bill_total_with_tax"
        android:textColor="#555454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tip_amount"
        android:textColor="#555454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/total_with_tip"
        android:textColor="#555454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="185dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/number_of_people"
        android:textColor="#555454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="178dp"
        android:layout_height="42dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/total_per_person"
        android:textColor="#555454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tip"
        android:textColor="#555454"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <LinearLayout
        android:layout_width="342dp"
        android:layout_height="2dp"
        android:background="#989898"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>